WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132446
DFGAbstractInterpreter should not claim Int52 arithmetic creates Int52s
https://bugs.webkit.org/show_bug.cgi?id=132446
Summary
DFGAbstractInterpreter should not claim Int52 arithmetic creates Int52s
Mark Hahnenberg
Reported
2014-05-01 15:57:10 PDT
Found while running regress/boolean-test.js. Doesn't repro easily, and only repros with dfg eager mode.
Attachments
IR dump
(42.03 KB, text/plain)
2014-05-01 15:58 PDT
,
Mark Hahnenberg
no flags
Details
the patch
(9.35 KB, patch)
2014-05-02 10:06 PDT
,
Filip Pizlo
mhahnenberg
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-05-01 15:57:43 PDT
<
rdar://problem/16788642
>
Mark Hahnenberg
Comment 2
2014-05-01 15:58:43 PDT
Created
attachment 230622
[details]
IR dump
Filip Pizlo
Comment 3
2014-05-02 10:06:21 PDT
Created
attachment 230666
[details]
the patch
Mark Hahnenberg
Comment 4
2014-05-02 10:20:17 PDT
Comment on
attachment 230666
[details]
the patch r=me
Filip Pizlo
Comment 5
2014-05-02 10:24:10 PDT
Landed in
http://trac.webkit.org/changeset/168172
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug